se organizan los scripts en el index

--- a/css/styleHome.css
+++ b/css/styleHome.css
@@ -2,8 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&display=swap');
 
 * {
-    margin: 0%;
-    padding: 0%;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
     font-family: 'Oswald', sans-serif;
 }
@@ -17,7 +17,6 @@ body {
     line-height: 20px;
     font-family: 'Oswald', sans-serif;
 }
-
 
 /* header */
 .container {
@@ -185,14 +184,10 @@ body {
 }
 
 
-
-
 .medio {
     height: 140px;
     background-color: rgb(255, 255, 255);
-   
     border: 0;
-
 }
 
 img {
@@ -310,8 +305,6 @@ img {
         font-size: .8rem;
     }
 }
-
-
 
 
 /* Nosotros */
@@ -930,7 +923,6 @@ span{
 }
 
 /* Wave */
-
 .wave {
     transform: rotate(180deg);
     top: 0;
