--- a/css/styleHome.css
+++ b/css/styleHome.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&display=swap');
 
 * {
@@ -37,18 +36,6 @@ body {
     height: 80px;
 }
 
-@media screen and (max-width:450px) {
-    .container img {
-        height: 45px;
-    }
-}
-
-@media screen and (max-width:290px) {
-    .container img {
-        height: 35px;
-    }
-}
-
 .dropdown-menu {
     padding: 1px 10px;
     background-color: hsla(203, 40%, 50%, .0);
@@ -80,8 +67,6 @@ body {
     -webkit-flex-orient: column;
     -ms-flex-direction: column;
 }
-
-
 
 .header-brackgorund {
     /* width: 100%; */
@@ -116,22 +101,6 @@ body {
 .navbar-brand {
     font-size: 1.5rem;
     color: white;
-}
-
-@media screen and (max-width:450px) {
-    .navbar-brand {
-        font-size: 1.5rem;
-    }    
-}
-@media screen and (max-width:350px) {
-    .navbar-brand {
-        font-size: 1.2rem;
-    }    
-}
-@media screen and (max-width:310px) {
-    .navbar-brand {
-        font-size: 1rem;
-    }    
 }
 
 .navbar-toggler {
@@ -183,7 +152,6 @@ body {
     margin-top: 180px;
 }
 
-
 .medio {
     height: 140px;
     background-color: rgb(255, 255, 255);
@@ -196,7 +164,6 @@ img {
 
 
 /* inicio */
-
 .contenedor-inicio{
     height: auto;
     /* width: calc(10% - 0px); */
@@ -252,64 +219,9 @@ img {
     font-size: 2rem;
 }
 
-@media screen and (max-width:1400px) {
-    .contenedor-descripcion .titulo h1{
-        padding-top: 19%;
-        font-size: 4rem;
-    }
-    .contenedor-descripcion .descripcion p{
-        padding:45px 150px;
-        font-size: 1.8rem;
-        line-height: 40px;
-    }
-}
-
-@media screen and (max-width:768px) {
-    .contenedor-descripcion .titulo h1{
-        font-size: 3.8rem;
-    }
-    .contenedor-descripcion .descripcion p{
-        padding:45px 50px;
-        font-size: 1.5rem;
-        line-height: 30px;
-    }
-} 
-
-@media screen and (max-width:450px) {
-    .contenedor-descripcion .titulo h1{
-        font-size: 3.8rem;
-    }
-    .contenedor-descripcion .descripcion p{
-        padding:45px 20px;
-        font-size: 1.5rem;
-        line-height: 30px;
-    }
-} 
-
-
-@media screen and (max-width:380px) {
-    .contenedor-descripcion .titulo h1{
-        
-        font-size: 3rem;
-    }
-    .contenedor-descripcion .descripcion p{
-        padding:45px 0px;
-        font-size: 1.1rem;
-        line-height: 20px;
-    }
-    .button-inicio {
-
-        width: 100px;
-
-        padding: .7rem 2.5rem;
-        font-size: .8rem;
-    }
-}
-
 
 /* Nosotros */
 .container-nosotros{
-
     margin: auto;
     padding: 0px 40px;
     color: #000;
@@ -317,12 +229,6 @@ img {
 
 .container-nosotros p{
     font-size: 1.5rem;
-}
-
-@media screen and (max-width:1200) {
-    .container-nosotros{
-        padding: 5px 90px;
-    }
 }
 
 .titulo-mision h1,
@@ -360,28 +266,6 @@ img {
     max-width: 100%;
 }
 
-@media screen and (max-width:760px) {
-    .container-nosotros p{
-        font-size: 1.1rem;
-    }
-    .contenido-mision p,
-    .contenido-vision p{
-        padding: 5px 30px;
-    }
-    
-}
-@media screen and (max-width:380px) {
-    .container-nosotros p{
-        font-size: .9rem;
-        line-height: 20px;
-    }
-    .contenido-mision p,
-    .contenido-vision p{
-        padding: 5px 10px;
-    }
-    
-}
-
 
 /* anuncio1 */
 .anuncio1{
@@ -404,7 +288,6 @@ img {
     margin: auto;
     padding-top: 180px;
     padding-bottom: 180px;
-    
 }
 
 .container__card{
@@ -414,13 +297,11 @@ img {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    
 }
 
 .card__father{
     margin: 20px;
     perspective: 1000px;
-    
 }
 
 .card__father:hover .card{
@@ -581,23 +462,10 @@ img {
     transition: all .2s ease;
 }
 
-
-@media screen and (max-width:360px) {
-    .card-text{
-        font-size: .8rem;
-        text-align: justify;
-    }
-    .contacto-titulo h1{
-        font-size: 20px;
-    }
-}
-
-
 /* separador de comentario anuncio2 */
 .contenido-anuncio2{
     color: #fff;
     padding: 20px;
-
 }
 
 .anuncio2{
@@ -638,40 +506,6 @@ img {
     padding-bottom: 20px;
 }
 
-
-@media screen and (max-width:768px) {
-
-    .texto-anuncio2 h1{
-        font-size: 1.3rem;
-    }
-    .texto-anuncio2 h2{
-        font-size: 1rem;
-    }
-}
-
-@media screen and (max-width:340px) {
-    
-    .texto-anuncio2 h1{
-        font-size: 1.1rem;
-    }
-    .texto-anuncio2 h2{
-        padding: 10px;
-        font-size: .85rem;
-    }
-    .input-comentario input,
-    .input-comentario button{
-        height: 20px;
-        border-radius: 8px;
-        padding: 10px;
-        margin-top: 20px;
-    }
-    .input-comentario textarea{
-        border-radius: 10px;
-        padding: 10px;
-        margin-top: 20px;
-    }
-}
-
 .input-comentario{
     display: flex;
     flex-direction: column;
@@ -699,7 +533,6 @@ img {
     margin-top: 20px;
 }
 
-
 .input-comentario button {
     width: 150px;
     margin-bottom: 40px;
@@ -711,7 +544,6 @@ img {
 
 
 /* contacto */
-
 .contenedor-contacto{
     background-color: hsla(0, 18%, 90%, 0.966);
     color: #e6e6e6;
@@ -719,21 +551,11 @@ img {
     width: 100%;
 }
 
-
 .contacto{
     background: linear-gradient(180deg, #5990d8, #350aac);
     border-radius: 20px;
     max-width: 90%;
     padding: 35px 50px;
-}
-
-@media screen and (max-width:450px) {
-    .contacto{
-        padding: 35px 20px;
-    }
-    .contacto-body-comentario textarea{
-        height: 10px;
-    }
 }
 
 .contacto-titulo{
@@ -754,7 +576,6 @@ img {
     border: none;
     display: flex;
     flex-direction: column;
-
     grid-column: 1/2;
     grid-row: 1/2;
 }
@@ -803,7 +624,6 @@ img {
 
 
 /* pie de pagina */
-
 .footer-top {
     z-index: 100;
     padding-bottom: 90px;
@@ -811,8 +631,7 @@ img {
     background-color: #000;
 }
 
-.footer-top a,
-span{
+.footer-top a,span{
     text-decoration: none;
     color: darkgray;
 }
@@ -825,7 +644,6 @@ span{
 .footer-bottom {
     background: linear-gradient(-90deg, #db03ac, #0416bb);
     color: rgb(207, 207, 207);
-    
 }
 
 .socials {
@@ -834,23 +652,6 @@ span{
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-@media screen and (max-width:900px) {
-    .socials {
-        display: flex;
-        flex-direction: column;
-    }
-}
-
-@media screen and (max-width:450px) {
-    .footer-top {
-        padding: 25px;
-    }
-    span {
-        font-size: 12px;
-    }
-    
 }
 
 .socials i {
@@ -877,7 +678,6 @@ span{
     padding: 0 20px;
     height: auto;
     width: 80px;
-
 }
 
 .copyright h5 {
@@ -897,12 +697,6 @@ span{
     padding: 12px;
 }
 
-@media screen and (max-width:360px) {
-    .titulo-marca {
-        padding: 0%;
-    }
-}
-
 .titulo-marca h1 {
     padding: 0%;
     padding-bottom: 10px;
@@ -911,15 +705,6 @@ span{
 
 .titulo-marca h2 {
     font-size: .8rem;
-}
-
-@media screen and (max-width:760px){
-    .titulo-marca{
-        color: rgb(223, 223, 223);
-        padding-right: 50px;
-        padding-left: 10px;
-        padding-bottom: 20px;
-    }
 }
 
 /* Wave */
@@ -948,3 +733,207 @@ span{
     margin-bottom: 0rem;
 }
 
+/* ----------------------------------- Media Querys --------------------------------------- */
+
+@media screen and (max-width:450px) {
+    .container img {
+        height: 45px;
+    }
+}
+
+@media screen and (max-width:290px) {
+    .container img {
+        height: 35px;
+    }
+}
+
+@media screen and (max-width:450px) {
+    .navbar-brand {
+        font-size: 1.5rem;
+    }    
+}
+@media screen and (max-width:350px) {
+    .navbar-brand {
+        font-size: 1.2rem;
+    }    
+}
+@media screen and (max-width:310px) {
+    .navbar-brand {
+        font-size: 1rem;
+    }    
+}
+
+/* Inicio */
+
+@media screen and (max-width:1400px) {
+    .contenedor-descripcion .titulo h1{
+        padding-top: 19%;
+        font-size: 4rem;
+    }
+    .contenedor-descripcion .descripcion p{
+        padding:45px 150px;
+        font-size: 1.8rem;
+        line-height: 40px;
+    }
+}
+
+@media screen and (max-width:768px) {
+    .contenedor-descripcion .titulo h1{
+        font-size: 3.8rem;
+    }
+    .contenedor-descripcion .descripcion p{
+        padding:45px 50px;
+        font-size: 1.5rem;
+        line-height: 30px;
+    }
+} 
+
+@media screen and (max-width:450px) {
+    .contenedor-descripcion .titulo h1{
+        font-size: 3.8rem;
+    }
+    .contenedor-descripcion .descripcion p{
+        padding:45px 20px;
+        font-size: 1.5rem;
+        line-height: 30px;
+    }
+} 
+
+
+@media screen and (max-width:380px) {
+    .contenedor-descripcion .titulo h1{
+        
+        font-size: 3rem;
+    }
+    .contenedor-descripcion .descripcion p{
+        padding:45px 0px;
+        font-size: 1.1rem;
+        line-height: 20px;
+    }
+    .button-inicio {
+
+        width: 100px;
+
+        padding: .7rem 2.5rem;
+        font-size: .8rem;
+    }
+}
+
+/* Nosotros */
+
+@media screen and (max-width:1200) {
+    .container-nosotros{
+        padding: 5px 90px;
+    }
+}
+
+@media screen and (max-width:760px) {
+    .container-nosotros p{
+        font-size: 1.1rem;
+    }
+    .contenido-mision p,
+    .contenido-vision p{
+        padding: 5px 30px;
+    }
+    
+}
+
+@media screen and (max-width:380px) {
+    .container-nosotros p{
+        font-size: .9rem;
+        line-height: 20px;
+    }
+    .contenido-mision p,
+    .contenido-vision p{
+        padding: 5px 10px;
+    }
+    
+}
+
+/* Servicios */
+@media screen and (max-width:360px) {
+    .card-text{
+        font-size: .8rem;
+        text-align: justify;
+    }
+    .contacto-titulo h1{
+        font-size: 20px;
+    }
+}
+
+/* Separador anuncion 2 */
+@media screen and (max-width:768px) {
+
+    .texto-anuncio2 h1{
+        font-size: 1.3rem;
+    }
+    .texto-anuncio2 h2{
+        font-size: 1rem;
+    }
+}
+
+@media screen and (max-width:340px) {
+    
+    .texto-anuncio2 h1{
+        font-size: 1.1rem;
+    }
+    .texto-anuncio2 h2{
+        padding: 10px;
+        font-size: .85rem;
+    }
+    .input-comentario input,
+    .input-comentario button{
+        height: 20px;
+        border-radius: 8px;
+        padding: 10px;
+        margin-top: 20px;
+    }
+    .input-comentario textarea{
+        border-radius: 10px;
+        padding: 10px;
+        margin-top: 20px;
+    }
+}
+
+/* Contacto */
+@media screen and (max-width:450px) {
+    .contacto{
+        padding: 35px 20px;
+    }
+    .contacto-body-comentario textarea{
+        height: 10px;
+    }
+}
+
+/* Footer */
+@media screen and (max-width:900px) {
+    .socials {
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width:450px) {
+    .footer-top {
+        padding: 25px;
+    }
+    span {
+        font-size: 12px;
+    }
+    
+}
+
+@media screen and (max-width:360px) {
+    .titulo-marca {
+        padding: 0%;
+    }
+}
+
+@media screen and (max-width:760px){
+    .titulo-marca{
+        color: rgb(223, 223, 223);
+        padding-right: 50px;
+        padding-left: 10px;
+        padding-bottom: 20px;
+    }
+}
